--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
       "target": "ES2021",
-      "module": "CommonJS",
-      "moduleResolution": "Node",
+      "module": "ESNext",
+      "moduleResolution": "bundler",
       "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
       "skipLibCheck": true,
@@ -14,9 +15,8 @@
       "paths": {
         "#storage/*": ["storage/*"],
         "#utils/*": ["utils/*"]
-    }
+      }
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
   }
-  
